# krusty

./: .gitignore  BYTE_IDENTITY_HANDOFF.md  CLAUDE.md  Cargo.toml  README.md  clippy-baseline.tsv  coverage-baseline.json  justfile  kotlin-versions  lefthook.yml  mise.toml  run-tests.sh  ser-survey.sh
.cargo/: mutants.toml
.claude/: review-criteria.md
.github/: dependabot.yml
.github/workflows/: ci.yml  conformance.yml  release.yml
crates/krusty-analysis/: Cargo.toml
crates/krusty-analysis/src/: lib.rs
crates/krusty-cli/: Cargo.toml
crates/krusty-cli/src/: cli.rs  lib.rs  main.rs
crates/krusty-lsp/: Cargo.toml
crates/krusty-lsp/src/: analysis.rs  compiler_analysis.rs  lib.rs  main.rs  options.rs  server.rs  worker.rs
crates/krusty-lsp/src/compiler_analysis/: completion.rs  navigation.rs  semantic.rs
crates/krusty-lsp/src/server/: implementation.rs
crates/krusty-lsp/tests/: kotlin_lsp_diff.rs  stdio_e2e.rs
docs/: ARCHITECTURE.md  CALL_RESOLVER_ANALYSIS.md  COMPILER_REVIEW.md  COVERAGE.md  DIFF_KOTLINC.md  FQN_NAME_TREE_MIGRATION.md  HANDOFF_ASSIGNABLE.md  IMPLEMENTATION_PLAN.md  JAVA_INTEROP.md  LAZY_CLASSPATH_RESOLUTION.md  METADATA_NOTES.md  PARITY_PROTOCOL.md  PLUGIN_API.md  POSITIONAL_SPILLS.md  RESOLVE_PLAN.md  SPEC.md  SYMBOL_SOURCE_REFACTOR.md  TEST_HARNESS.md  TEST_QUALITY.md
harness/: run-diff.sh
scripts/: coverage-bless.sh  coverage-gate.sh  coverage.sh
src/: architecture.rs  assignable.rs  ast.rs  backend.rs  call_resolver.rs  cli.rs  compiler.rs  conformance.rs  diag.rs  features.rs  frontend.rs  ir.rs  ir_lower.rs  lexer.rs  lib.rs  libraries.rs  lru.rs  lsp.rs  main.rs  module_symbols.rs  name_tree.rs  names.rs  parser.rs  resolve.rs  runtime.rs  symbol_resolver.rs  symbol_source.rs  synthetics.rs  token.rs  toolchain.rs  trace.rs  types.rs
src/codegen/: classfile.rs  emit.rs  mod.rs
src/js/: backend.rs  emit.rs  mod.rs
src/jvm/: backend.rs  classfile.rs  classpath.rs  classreader.rs  coroutine_intrinsics.rs  emit.rs  inline.rs  inline_class.rs  ir_emit.rs  java_stub.rs  jvm_class_map.rs  jvm_libraries.rs  metadata.rs  mod.rs  names.rs  suspend.rs  value_classes.rs
src/metadata/: builder.rs  class_builder.rs  encoding.rs  mod.rs  module.rs  protobuf.rs
src/plugins/: cli.rs  codegen_loop.rs  deps.rs  ksp.rs  mod.rs  registry.rs  serialization.rs
tests/: abstract_instantiation_check_e2e.rs  abstract_member_check_e2e.rs  abstract_modifier_consistency_e2e.rs  analyze_skips.rs  annotation_instantiation_e2e.rs  annotations_e2e.rs  anon_fun_statement_e2e.rs  anon_object_capture_e2e.rs  anon_object_capture_member_e2e.rs  anonymous_function_e2e.rs  apt_host_e2e.rs  arity_error_coverage_e2e.rs  array_e2e.rs  array_init_lambda_e2e.rs  assert_intrinsic_e2e.rs  assertions_e2e.rs  backend_rejection_coverage_e2e.rs  backing_field_accessor_e2e.rs  backtick_identifier_e2e.rs  bare_accessor_and_setter_bridge_e2e.rs  bitwise_e2e.rs  bound_expr_ref_e2e.rs  bound_library_ref_e2e.rs  bounded_type_param_e2e.rs  box_corpus_regression_e2e.rs  box_vendored_e2e.rs  boxed_array_construction_e2e.rs  boxing_e2e.rs  bracket_lambda_param_e2e.rs  break_continue_e2e.rs  break_continue_expr_e2e.rs  break_continue_in_branch_e2e.rs  build1017_oo1_vcparam_result_takeif_e2e.rs  build1018_pp1_suspend_block_firstornull_e2e.rs  build688_cc1_bb1_e2e.rs  build688_ff1_suspend_hof_e2e.rs  build702_aa1_suspend_nullable_elvis_e2e.rs  build702_dd1_suspend_default_e2e.rs  build702_fq_trailing_lambda_e2e.rs  build702_gg1_sealed_when_e2e.rs  (+505 more)
tests/box_data/: PROVENANCE.md  inlineMemberFunction.kt  lateinitProperty.kt  topLevelFunctionTypedPropertyInvoke.kt
tests/cases/: arith.kt  control.kt
tests/common/: mod.rs
tests/fixtures/ksp/: Builder.kt  Launcher.kt
tests/fixtures/serialization/: ManualSerializer.kt  SerBox.kt
tests/golden/: data_class_equals.javap  data_class_primitive_hashcode.javap  dtc.javap  for_in_intarray.javap  for_in_local_array.javap  rtc.javap  ruc.javap  ruv.javap
