[package]
name = "krusty"
version = "0.0.1"
edition = "2021"
description = "Memory-lean Kotlin->JVM compiler PoC (per-file streaming pipeline)"

[dependencies]
# Read `.class` entries from `.jar` classpath entries (Java/Kotlin library support).
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
rayon = "1"
libc = "0.2"
# Sampling profiler → flamegraph SVG (gated behind KRUSTY_FLAMEGRAPH in the conformance harness).
pprof = { version = "0.14", features = ["flamegraph"] }

[lib]
name = "krusty"
path = "src/lib.rs"

[[bin]]
name = "krusty"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
