[package]
name = "krusty"
version = "0.0.1"
edition = "2021"
description = "Memory-lean Kotlin->JVM compiler PoC (per-file streaming pipeline)"
autotests = false

[dependencies]
# Read `.class` entries from `.jar` classpath entries (Java/Kotlin library support).
zip = { version = "8", default-features = false, features = ["deflate"] }
# Inflate zlib-compressed JDK jimage resources (JetBrains Runtime / `jlink --compress` images).
flate2 = "1"
# Heap profiler, OFF by default (optional dep, enabled only by the `dhat-heap` feature) so normal
# builds pay zero cost. See the `dhat-heap` feature.
dhat = { version = "0.3", optional = true }

[features]
# Opt-in compiler tracing (`trace_compiler!`). OFF by default so release/gate/conformance builds pay
# ZERO cost — every trace site compiles to nothing. Build with `--features trace`, then set
# `KRUSTY_TRACE=all` or a category list (`KRUSTY_TRACE=resolve,suspend`) to emit diagnostics on stderr.
# No logging crate is used on purpose (the project is dependency-lean; a compile-time-elided macro beats
# any crate's runtime level check on the "no penalty when disabled" axis). See `src/trace.rs`.
trace = []

# Opt-in heap profiling. `cargo test --features dhat-heap --test conformance kotlin_codegen_box_conformance`
# swaps in dhat's global allocator and profiles the compile phase, writing `dhat-heap.json` (view at
# https://nnethercote.github.io/dh_view/dh_view.html). OFF by default — zero cost, the dep isn't compiled.
dhat-heap = ["dep:dhat"]

[dev-dependencies]
rayon = "1"
libc = "0.2"
# Sampling profiler → flamegraph SVG (gated behind KRUSTY_FLAMEGRAPH in the conformance harness).
pprof = { version = "0.15", features = ["flamegraph"] }

[lib]
name = "krusty"
path = "src/lib.rs"

[[bin]]
name = "krusty"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"

# Fast-iteration profile for the test/conformance round. The in-loop tests don't need optimization, so
# this is unoptimized (`opt-level = 0`, inherited from `dev`) for a seconds-long rebuild after an edit —
# but with `overflow-checks`/`debug-assertions` OFF: krusty relies on wrapping arithmetic (hashes, JVM
# value math), which a debug build's overflow checks abort on (SIGABRT). `debug = false` drops debuginfo
# for a faster link. Run the round with `cargo test --profile gate …` (see run-tests.sh), not `--release`.
[profile.gate]
inherits = "dev"
overflow-checks = false
debug-assertions = false
debug = false
incremental = true

# Integration test binaries are explicit because Cargo otherwise treats every tests/*.rs file
# as a separate executable. Product e2e tests are grouped into one e2e binary, while external
# corpus/reference-toolchain suites are grouped into one conformance binary that fast/coverage
# runs can skip before executing it.

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"
