[package]
name = "krusty-lsp"
version = "0.0.1"
edition = "2021"
description = "Language Server Protocol implementation backed by the krusty compiler"

[dependencies]
krusty = { path = "../.." }
krusty-analysis = { path = "../krusty-analysis" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
